## services/PrintFulfillmentService.js
// This module handles communication with an external printing and fulfillment service

class PrintFulfillmentService {
  /**
   * Create an order with the printing service.
   * @param {object} orderDetails - The details of the order including artworkId, printSize, and frameStyle.
   * @returns {Promise<object>} - A promise that resolves with the order confirmation details.
   */
  async createOrder(orderDetails) {
    if (!orderDetails || typeof orderDetails !== 'object') {
      throw new Error('Invalid order details provided');
    }

    // In a real-world scenario, here we would have an API call to the printing service.
    // For the purpose of this example, we'll simulate the API response.

    // Simulated API call to the printing service
    const simulatedApiResponse = () => {
      return new Promise((resolve) => {
        setTimeout(() => {
          resolve({
            id: `order_${new Date().getTime()}`, // Unique order ID
            artworkId: orderDetails.artworkId,
            printSize: orderDetails.printSize,
            frameStyle: orderDetails.frameStyle,
            status: 'confirmed',
            estimatedDelivery: new Date(new Date().getTime() + 7 * 24 * 60 * 60 * 1000) // Estimated delivery in one week
          });
        }, 1000); // Simulate network delay
      });
    };

    try {
      const orderConfirmation = await simulatedApiResponse();
      return orderConfirmation;
    } catch (error) {
      throw new Error(`Order creation failed: ${error.message}`);
    }
  }
}

module.exports = PrintFulfillmentService;
